--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
   {% include academics.html %}
   {% include academics-cert.html %}
   {% include featured-projects.html %}
+  {% include featured-projects.html %}
   {% include other-projects.html %}
   {% include footer.html %}
   {% include top-button.html %}
