--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
   {% include switch.html %}
   {% include intro.html %}
   {% include background.html %}
+  {% include skills.html %}
   {% include academics.html %}
-  {% include academics-cert.html %}
   {% include featured-projects.html %}
   {% include featured-projects2.html %}
   {% include other-projects.html %}
