Add three pages for all projects

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
   {% include academics.html %}
   {% include featured-projects.html %}
   {% include featured-projects2.html %}
+  {% include featured-projects3.html %}
   {% include other-projects.html %}
   {% include footer.html %}
   {% include top-button.html %}
